BNF.txt


functiondeclaration = funcname args bracketedexpression || main bracketedexpression

bracketedexpression = lb valueex rb || lb innerex semicolon valueex rb


innerex = inner semicolon inner semicolon .... inner

inner = functioncall || condition || innerex


args = varname varname .. varname

functioncall = funcname lp functionarg rp

functionarg = var , var , ..  var


condition = if lp var binaryopeator var rp bracketedexpression bracketedexpression

var = number || varname 

funcname = [a-z]*
varname = [a-z]*
